# md2doc

./: .gitignore  LICENSE  README.md  pyproject.toml  格式要求.md
scripts/: md2docx.py
src/md2doc/: __init__.py  analyzer.py  converter.py  mcp_server.py
